NostrDebug - dark mode fixes

--- a/apps/nostr-debug/NostrDebug.Web/Events/NostrEventEdit.razor.css
+++ b/apps/nostr-debug/NostrDebug.Web/Events/NostrEventEdit.razor.css
@@ -1,1 +1,3 @@
-﻿
+﻿::deep .positioning-region {
+    background-color: transparent;
+}
