--- a/apps/nostr-debug/NostrDebug.Web/Events/NostrFilterEditJsonDialog.razor.css
+++ b/apps/nostr-debug/NostrDebug.Web/Events/NostrFilterEditJsonDialog.razor.css
@@ -1,18 +1,19 @@
 ﻿::deep .monaco-editor-container {
     width: 100%;
     height: 400px;
+    background-color: var(--fill-color);
 }
 
 ::deep .monaco-editor-background {
-    background-color: #fbfbfb;
+    background-color: var(--fill-color);
 }
 
 ::deep .monaco-editor .margin {
-    background-color: #fbfbfb;
+    background-color: var(--fill-color);
 }
 
 ::deep .decorationsOverviewRuler {
-    background-color: #fbfbfb;
+    background-color: var(--fill-color);
 }
 
 .content {
